<resources>
    <string name="app_name">FlipDroid</string>
    <string name="title_text">FlipDroid</string>
    <string name="play_game">PLAY GAME</string>
    <string name="scoreboard">SCOREBOARD</string>
    <string name="settings">SETTINGS</string>
    <string name="how_to_play">HOW TO PLAY</string>
    <string name="number_of_flips">NUMBER OF FLIPS:</string>
    <string name="go_back">BACK</string>
    <string name="first_card">first card</string>
    <string name="second_card">second card</string>
    <string name="third_card">third card</string>
    <string name="fourth_card">fourth card</string>
    <string name="fifth_card">fifth card</string>
    <string name="sixth_card">sixth card</string>
    <string name="seventh_card">seventh card</string>
    <string name="eighth_card">eighth card</string>
    <string name="ninth_card">ninth card</string>
    <string name="tenth_card">tenth card</string>
    <string name="eleventh_card">eleventh card</string>
    <string name="twelfth_card">twelfth card</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="high_score">High Score: 1200</string>
    <string name="current_score">Current Score: 900</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="night_mode">Night Mode</string>
    <string name="fewest_flips">Fewest Flips</string>
    <string name="fastest_time">Fastest Time</string>
    <string name="choose_your_game_mode">Choose your game mode:</string>
    <string name="help_text1">Welcome to FlipDroid!</string>

    <string name="help_text2">This game is a mobile version of the classic &quot;memory&quot; matching game. Upon starting the game session, a deck of 12 cards will be shuffled then dealt face down
    onto the game field; each of these cards has a face image that matches only one other card in the deck.
    The player can then tap any two cards, one at a time, to flip them face up. If they match,
    the cards will remain face up for the rest of the game. Otherwise, they are turned back face down. The game is
    finished when all 12 cards are face up on the field at once. The cards never change position on the field, so the
    key is to commit to memory the location of each card!</string>

    <string name="help_text3">
        Two different modes of play may be selected on the &quot;Settings&quot; screen. In the default mode, &quot;Fewest Flips,&quot;
        the goal is to complete the game in the fewest sets of card flips possible. In &quot;Fastest Time,&quot; the goal
        is to complete the game in the shortest amount of time possible, regardless of how many flips are used.
        High scores (Number of Flips or Time Elapsed) are recorded separately for each mode.
    </string>

    <string name="help_text4">
        The &quot;Settings&quot; screen also includes a toggle switch for activating the &quot;Night Mode&quot; theme, allowing for a more
        comfortable viewing experience in low-light conditions for some users.
    </string>
    <string name="high_scores">High Scores</string>
    <string name="flips_title">Fewest Flips</string>
    <string name="flips_1">6</string>
    <string name="flips_2">8</string>
    <string name="flips_3">20</string>
    <string name="time_title">Fastest Time</string>
    <string name="time_1">00:15:04</string>
    <string name="time_2">01:02:17</string>
    <string name="time_3">5:00:31</string>


</resources>